--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       </div>
       <div class="grid-2">
         <h3>Monthly Subscription</h3>
-        <p><span>&dollar;29</span> per month</p>
-        <p>Full access for less than &dollar;1 a day</p>
-        <button>Sign Up</button>
+        <p><span class="dollar">&dollar;29</span> <span class="monthly">per month</span></p>
+        <p class="grid_2_text">Full access for less than &dollar;1 a day</p>
+        <button class="btn">Sign Up</button>
       </div>
       <div class="grid-3">
         <h3>Why Us</h3>
